// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Markdown/BasicFormatting matches snapshot 1`] = `
<div>
  <div
    class="prose max-w-none prose-pre:rounded-md prose-pre:border prose-pre:border-border prose-pre:bg-muted prose-pre:text-foreground prose-pre:text-sm prose-pre:overflow-x-auto prose-code:bg-muted prose-code:px-1 prose-code:py-0.5 prose-code:rounded-sm prose-code:text-sm prose-code:before:content-none prose-code:after:content-none prose-pre:prose-code:bg-transparent prose-pre:prose-code:p-0 prose-img:inline prose-img:my-0"
  >
    <h1
      id="heading-1"
    >
      Heading 1
      <a
        aria-hidden="true"
        href="#heading-1"
        tabindex="-1"
      >
        <span
          class="icon icon-link"
        />
      </a>
    </h1>
    

    <h2
      id="heading-2"
    >
      Heading 2
      <a
        aria-hidden="true"
        href="#heading-2"
        tabindex="-1"
      >
        <span
          class="icon icon-link"
        />
      </a>
    </h2>
    

    <h3
      id="heading-3"
    >
      Heading 3
      <a
        aria-hidden="true"
        href="#heading-3"
        tabindex="-1"
      >
        <span
          class="icon icon-link"
        />
      </a>
    </h3>
    

    <p>
      This is a paragraph with 
      <strong>
        bold
      </strong>
      , 
      <em>
        italic
      </em>
      , and 
      <code>
        inline code
      </code>
      .
    </p>
    

    <ul>
      

      <li>
        Unordered list item 1
      </li>
      

      <li>
        Unordered list item 2

        <ul>
          

          <li>
            Nested item
          </li>
          

        </ul>
        

      </li>
      

    </ul>
    

    <ol>
      

      <li>
        Ordered list item 1
      </li>
      

      <li>
        Ordered list item 2
      </li>
      

    </ol>
    

    <blockquote>
      

      <p>
        This is a blockquote.
      </p>
      

    </blockquote>
    

    <hr />
    

    <p>
      <a
        href="https://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        A link
      </a>
    </p>
  </div>
</div>
`;

exports[`Markdown/CodeBlock matches snapshot 1`] = `
<div>
  <div
    class="prose max-w-none prose-pre:rounded-md prose-pre:border prose-pre:border-border prose-pre:bg-muted prose-pre:text-foreground prose-pre:text-sm prose-pre:overflow-x-auto prose-code:bg-muted prose-code:px-1 prose-code:py-0.5 prose-code:rounded-sm prose-code:text-sm prose-code:before:content-none prose-code:after:content-none prose-pre:prose-code:bg-transparent prose-pre:prose-code:p-0 prose-img:inline prose-img:my-0"
  >
    <p>
      Here is a code block:
    </p>
    

    <pre
      class="shiki shiki-themes github-light github-dark github-dark-dimmed"
      style="--shiki-light: #24292e; --shiki-dark: #e1e4e8; --shiki-dimmed: #adbac7; --shiki-light-bg: #fff; --shiki-dark-bg: #24292e; --shiki-dimmed-bg: #22272e;"
      tabindex="0"
    >
      <code>
        <span
          class="line"
        >
          <span
            style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
          >
            interface
          </span>
          <span
            style="--shiki-light: #6F42C1; --shiki-dark: #B392F0; --shiki-dimmed: #F69D50;"
          >
             User
          </span>
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
             {
          </span>
        </span>
        

        <span
          class="line"
        >
          <span
            style="--shiki-light: #E36209; --shiki-dark: #FFAB70; --shiki-dimmed: #F69D50;"
          >
              id
          </span>
          <span
            style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
          >
            :
          </span>
          <span
            style="--shiki-light: #005CC5; --shiki-dark: #79B8FF; --shiki-dimmed: #6CB6FF;"
          >
             string
          </span>
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
            ;
          </span>
        </span>
        

        <span
          class="line"
        >
          <span
            style="--shiki-light: #E36209; --shiki-dark: #FFAB70; --shiki-dimmed: #F69D50;"
          >
              name
          </span>
          <span
            style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
          >
            :
          </span>
          <span
            style="--shiki-light: #005CC5; --shiki-dark: #79B8FF; --shiki-dimmed: #6CB6FF;"
          >
             string
          </span>
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
            ;
          </span>
        </span>
        

        <span
          class="line"
        >
          <span
            style="--shiki-light: #E36209; --shiki-dark: #FFAB70; --shiki-dimmed: #F69D50;"
          >
              email
          </span>
          <span
            style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
          >
            :
          </span>
          <span
            style="--shiki-light: #005CC5; --shiki-dark: #79B8FF; --shiki-dimmed: #6CB6FF;"
          >
             string
          </span>
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
            ;
          </span>
        </span>
        

        <span
          class="line"
        >
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
            }
          </span>
        </span>
        

        <span
          class="line"
        />
        

        <span
          class="line"
        >
          <span
            style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
          >
            function
          </span>
          <span
            style="--shiki-light: #6F42C1; --shiki-dark: #B392F0; --shiki-dimmed: #DCBDFB;"
          >
             greet
          </span>
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
            (
          </span>
          <span
            style="--shiki-light: #E36209; --shiki-dark: #FFAB70; --shiki-dimmed: #F69D50;"
          >
            user
          </span>
          <span
            style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
          >
            :
          </span>
          <span
            style="--shiki-light: #6F42C1; --shiki-dark: #B392F0; --shiki-dimmed: #F69D50;"
          >
             User
          </span>
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
            )
          </span>
          <span
            style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
          >
            :
          </span>
          <span
            style="--shiki-light: #005CC5; --shiki-dark: #79B8FF; --shiki-dimmed: #6CB6FF;"
          >
             string
          </span>
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
             {
          </span>
        </span>
        

        <span
          class="line"
        >
          <span
            style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
          >
              return
          </span>
          <span
            style="--shiki-light: #032F62; --shiki-dark: #9ECBFF; --shiki-dimmed: #96D0FF;"
          >
             \`Hello, \${
          </span>
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
            user
          </span>
          <span
            style="--shiki-light: #032F62; --shiki-dark: #9ECBFF; --shiki-dimmed: #96D0FF;"
          >
            .
          </span>
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
            name
          </span>
          <span
            style="--shiki-light: #032F62; --shiki-dark: #9ECBFF; --shiki-dimmed: #96D0FF;"
          >
            }!\`
          </span>
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
            ;
          </span>
        </span>
        

        <span
          class="line"
        >
          <span
            style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
          >
            }
          </span>
        </span>
      </code>
    </pre>
  </div>
</div>
`;

exports[`Markdown/Comment matches snapshot 1`] = `
<div>
  <div
    class="prose max-w-none prose-pre:rounded-md prose-pre:border prose-pre:border-border prose-pre:bg-muted prose-pre:text-foreground prose-pre:text-sm prose-pre:overflow-x-auto prose-code:bg-muted prose-code:px-1 prose-code:py-0.5 prose-code:rounded-sm prose-code:text-sm prose-code:before:content-none prose-code:after:content-none prose-pre:prose-code:bg-transparent prose-pre:prose-code:p-0 prose-img:inline prose-img:my-0"
  >
    <p>
      Fixed the issue by updating the query builder.
    </p>
    

    <p>
      The problem was that 
      <code>
        buildQuery()
      </code>
       wasn't escaping special characters in label names containing spaces.
    </p>
    

    <pre
      class="shiki shiki-themes github-light github-dark github-dark-dimmed"
      style="--shiki-light: #24292e; --shiki-dark: #e1e4e8; --shiki-dimmed: #adbac7; --shiki-light-bg: #fff; --shiki-dark-bg: #24292e; --shiki-dimmed-bg: #22272e;"
      tabindex="0"
    >
      <code>
        <span
          class="line"
        >
          <span
            style="--shiki-light: #B31D28; --shiki-dark: #FDAEB7; --shiki-dimmed: #FF938A;"
          >
            - const q = \`label:\${name}\`;
          </span>
        </span>
        

        <span
          class="line"
        >
          <span
            style="--shiki-light: #22863A; --shiki-dark: #85E89D; --shiki-dimmed: #8DDB8C;"
          >
            + const q = \`label:"\${name}"\`;
          </span>
        </span>
      </code>
    </pre>
    

    <p>
      Closes #42.
    </p>
  </div>
</div>
`;

exports[`Markdown/GithubFlavored matches snapshot 1`] = `
<div>
  <div
    class="prose max-w-none prose-pre:rounded-md prose-pre:border prose-pre:border-border prose-pre:bg-muted prose-pre:text-foreground prose-pre:text-sm prose-pre:overflow-x-auto prose-code:bg-muted prose-code:px-1 prose-code:py-0.5 prose-code:rounded-sm prose-code:text-sm prose-code:before:content-none prose-code:after:content-none prose-pre:prose-code:bg-transparent prose-pre:prose-code:p-0 prose-img:inline prose-img:my-0"
  >
    <h2
      id="task-list"
    >
      Task list
      <a
        aria-hidden="true"
        href="#task-list"
        tabindex="-1"
      >
        <span
          class="icon icon-link"
        />
      </a>
    </h2>
    

    <ul
      class="contains-task-list"
    >
      

      <li
        class="task-list-item"
      >
        <input
          checked=""
          disabled=""
          type="checkbox"
        />
         Completed task
      </li>
      

      <li
        class="task-list-item"
      >
        <input
          disabled=""
          type="checkbox"
        />
         Incomplete task
      </li>
      

      <li
        class="task-list-item"
      >
        <input
          disabled=""
          type="checkbox"
        />
         Another task
      </li>
      

    </ul>
    

    <h2
      id="table"
    >
      Table
      <a
        aria-hidden="true"
        href="#table"
        tabindex="-1"
      >
        <span
          class="icon icon-link"
        />
      </a>
    </h2>
    


























    <table>
      <thead>
        <tr>
          <th>
            Feature
          </th>
          <th>
            Status
          </th>
          <th>
            Priority
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Auth
          </td>
          <td>
            Done
          </td>
          <td>
            High
          </td>
        </tr>
        <tr>
          <td>
            Search
          </td>
          <td>
            WIP
          </td>
          <td>
            Medium
          </td>
        </tr>
        <tr>
          <td>
            Export
          </td>
          <td>
            Todo
          </td>
          <td>
            Low
          </td>
        </tr>
      </tbody>
    </table>
    

    <h2
      id="strikethrough"
    >
      Strikethrough
      <a
        aria-hidden="true"
        href="#strikethrough"
        tabindex="-1"
      >
        <span
          class="icon icon-link"
        />
      </a>
    </h2>
    

    <p>
      This is 
      <del>
        deleted
      </del>
       text.
    </p>
    

    <h2
      id="emoji"
    >
      Emoji
      <a
        aria-hidden="true"
        href="#emoji"
        tabindex="-1"
      >
        <span
          class="icon icon-link"
        />
      </a>
    </h2>
    

    <p>
      🚀 🐛 ✨
    </p>
  </div>
</div>
`;

exports[`Markdown/UnlabeledCodeBlock matches snapshot 1`] = `
<div>
  <div
    class="prose max-w-none prose-pre:rounded-md prose-pre:border prose-pre:border-border prose-pre:bg-muted prose-pre:text-foreground prose-pre:text-sm prose-pre:overflow-x-auto prose-code:bg-muted prose-code:px-1 prose-code:py-0.5 prose-code:rounded-sm prose-code:text-sm prose-code:before:content-none prose-code:after:content-none prose-pre:prose-code:bg-transparent prose-pre:prose-code:p-0 prose-img:inline prose-img:my-0"
  >
    <p>
      Here is a code block without a language:
    </p>
    

    <pre
      tabindex="0"
    >
      <code>
        # Please enter the title and comment message. The first non-empty line will be
# used as the title. Lines starting with '#' will be ignored.
# An empty title aborts the operation.

      </code>
    </pre>
    

    <p>
      And some text after.
    </p>
  </div>
</div>
`;
